# koss-selection-task

./: CMakeLists.txt  README.md
pixelated-characters/: 74108-OI6O2J-829.eps  74108-OI6O2M-905.ai  Fonts.txt
proj-1-model/src/: main.cpp
src/: config.h  glad.c  main.cpp
src/glad/: glad.h
src/glad/src/: glad.c
